# ec2-bastion

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
cloudformation/: ssm-on-demand-instance.yaml
config/: prod.yaml.example
docs/: BASTION_PLAN.md  DESIGN.md  TROUBLESHOOTING.md
docs/adr/: 001-asg-for-instance-lifecycle.md  002-ssm-session-manager-access.md  003-ssh-over-ssm.md  004-ed25519-keys-in-ssm-parameter-store.md  005-openssh-key-format-in-lambda.md  006-future-crypto-policy-selinux.md  007-cloudformation-for-iac.md  008-pre-commit-hooks.md  009-resource-tagging.md  010-shellcheck.md  011-rumdl-markdown.md  012-uv-for-python.md  013-project-structure.md  014-bastion-source-security-group.md  015-yaml-config-files.md  016-interactive-environment-chooser.md  017-ec2-instance-connect.md  018-resolve-ssm-for-ami.md  README.md
notebooks/: database.py  ssm_on_demand.py
scripts/: chooser.py  common.sh  database-tunnel.sh  ensure-ec2-running.sh  environments-with-both.json  environments.json  interactive-ssh-session.sh  interactive-ssm-session.sh  lint.sh  load_config.py  resolve-bastion-source-sg.sh  status.sh  test-ssh-run-command.sh  test-ssm-run-command.sh
